--- a/21.html
+++ b/21.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Also, du hast die handelnden Personen gut erkannt"</p>
+      <p style="text-align:left;">"Ach so, wegen dem Döschen"</p>
+      <p style="text-align:right;">"fack ju, göhte"</p>
+      <p style="text-align:center;">"Es geht um den Zustand einer der abgebildeten Personen"</p>
+      <p style="text-align:left;">"TWINS!"</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
