--- a/22.html
+++ b/22.html
@@ -11,10 +11,10 @@
         <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/21" style=color:rgb(238,130,238)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(238,130,238)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/23" style=color:rgb(238,130,238)>&gt</a>
       </div>
     </body>
 </html>
