--- a/18.html
+++ b/18.html
@@ -7,14 +7,14 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="18.jpg" alt="quest image" style="height:70vh;">
-        <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
+        <img src="15.jpg" alt="quest image" style="width:70vw;">
+        <p style="font-size:200%; text-align:center;">Bad Lieutenant (Abel Ferrara, 1992)</p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(0,255,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(238,130,238)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(0,255,0)>&gt</a>
       </div>
     </body>
 </html>
