--- a/17.html
+++ b/17.html
@@ -7,13 +7,14 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="17.jpg" alt="quest image" style="height:90vh;">
+        <img src="16.jpg" alt="quest image" style="width:60vw;">
+        <p style="font-size:200%; text-align:center;">(Das) Bad, (das) Leute nennt</p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/16" style=color:rgb(238,130,238)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/16" style=color:rgb(0,255,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(0,255,0)>&gt</a>
       </div>
     </body>
 </html>
