--- a/16.html
+++ b/16.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
-<style>
-body {
-  background-color: rgb(188,130,188);
-}
-</style>
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      <div class="qbild">
-      <p style="color:rgb(238, 130, 238); font-size:20em;">
-      4
-      </p>
-      </div>
+    <div class="quotes">
+      <p style="text-align:center;">"Es ist sehr komplex in seiner Blödheit."</p>
+      <p style="text-align:left;">"Nach der Auflösung bekomme ich wahrscheinlich Schläge."</p>
+      <p style="text-align:right;">"Letztes Jahr in Marienbad"</p>
+      <p style="text-align:center;">"Sein Tun gibt ihm seinen Namen."</p>
+      <p style="text-align:left;">"Krieg das nur am Rande mit und es wird immer verrückter."</p>
+    </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/15" style=color:rgb(238,130,238)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/15" style=color:rgb(0,255,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(0,255,0)>&gt</a>
       </div>
     </body>
 </html>
