--- a/14.html
+++ b/14.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(0,155,0);
+}
+</style>
 </head>
 <html>
-    <head>
-    </head>
     <body>
       <div class="qbild">
-        <img src="14.jpg" alt="quest image" style="width:60vw;">
-        <p style="font-size:200%; text-align:center;">(Das) Bad, (das) Leute nennt</p>
+      <p style="color:rgb(0, 255, 0); font-size:20em;">
+      3
+      </p>
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/13" style=color:rgb(0,255,0)>&lt</a>
