--- a/13.html
+++ b/13.html
@@ -3,19 +3,18 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
+    <head>
+    </head>
     <body>
-    <div class="quotes">
-      <p style="text-align:center;">"Es ist sehr komplex in seiner Blödheit."</p>
-      <p style="text-align:left;">"Nach der Auflösung bekomme ich wahrscheinlich Schläge."</p>
-      <p style="text-align:right;">"Letztes Jahr in Marienbad"</p>
-      <p style="text-align:center;">"Sein Tun gibt ihm seinen Namen."</p>
-      <p style="text-align:left;">"Krieg das nur am Rande mit und es wird immer verrückter."</p>
-    </div>
+      <div class="qbild">
+        <img src="13.jpg" alt="quest image" style="width:60vw;">
+        <p style="font-size:200%; text-align:center;">Das siebente Siegel / Det sjunde inseglet (Ingmar Bergman, 1957)</p>
+      </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12" style=color:rgb(0,255,0)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12" style=color:rgb(0,0,255)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/14" style=color:rgb(0,255,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/14" style=color:rgb(0,0,255)>&gt</a>
       </div>
     </body>
 </html>
