--- a/12.html
+++ b/12.html
@@ -7,13 +7,14 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="12.jpg" alt="quest image" style="height:70vh;">
+        <img src="12.jpg" alt="quest image" style="width:80vw;">
+        <p style="font-size:200%; text-align:center;">Taxi Driver (Martin Scorsese, 1976)</p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/c" style=color:rgb(0,255,0)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/11" style=color:rgb(0,0,255)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/13" style=color:rgb(0,255,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/13" style=color:rgb(0,0,255)>&gt</a>
       </div>
     </body>
 </html>
