--- a/10.html
+++ b/10.html
@@ -6,10 +6,13 @@
     <head>
     </head>
     <body>
-      <div class="qbild">
-        <img src="10.jpg" alt="quest image" style="width:80vw;">
-        <p style="font-size:200%; text-align:center;">Taxi Driver (Martin Scorsese, 1976)</p>
-      </div>
+    <div class="quotes">
+      <p style="text-align:center;">"Sie: Gib Gas, ich will Spaß"</p>
+      <p style="text-align:left;">"Ich wage nicht, im Zusammenhang mit der Lösung vor allem seiner Sprechblase das Wort "Homophonie" in den Mund zu nehmen"</p>
+      <p style="text-align:right;">"Das Gehirn will das nicht, es will irgendwie sein eigenes Ding verfolgen, und so kommt man nie zur Lösung, seufz."</p>
+      <p style="text-align:center;">"Ich kommuniziere nur noch per Filmnamen und meine Mitmenschen müssen entziffern, was ich von ihnen möchte."</p>
+      <p style="text-align:left;">"Ich verlange ein Schiedsgericht"</p>
+    </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/09" style=color:rgb(0,0,255)>&lt</a>
       </div>
