--- a/07.html
+++ b/07.html
@@ -7,13 +7,15 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="07.jpg" alt="quest image" style="height:90vh;">
+        <img src="07.jpg" alt="quest image" style="width:90vw;">
+        <p style="font-size:200%; text-align:center;">Magnificent Obsession (Douglas Sirk, 1954)</p>
       </div>
+     </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/b" style=color:rgb(0,0,255)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/06" style=color:rgb(255,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/08" style=color:rgb(0,0,255)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/08" style=color:rgb(255,0,0)>&gt</a>
       </div>
     </body>
 </html>
