--- a/06.html
+++ b/06.html
@@ -7,15 +7,15 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="06.jpg" alt="quest image" style="width:90vw;">
-        <p style="font-size:200%; text-align:center;">Magnificent Obsession (Douglas Sirk, 1954)</p>
+        <img src="06.jpg" alt="quest image" style="height:70vh;">
+        <p style="font-size:200%; text-align:center;">Mag nie Fisch und Obst essen</p>
       </div>
-     </div>
+      </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/05" style=color:rgb(255,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/b" style=color:rgb(255,0,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(255,0,0)>&gt</a>
       </div>
     </body>
 </html>
