--- a/05.html
+++ b/05.html
@@ -3,14 +3,14 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      <div class="qbild">
-        <img src="05.jpg" alt="quest image" style="height:70vh;">
-        <p style="font-size:200%; text-align:center;">Mag nie Fisch und Obst essen</p>
-      </div>
-      </div>
+    <div class="quotes">
+      <p style="text-align:center;">"Die Braut, die sich nicht trout"</p>
+      <p style="text-align:left;">"Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche"</p>
+      <p style="text-align:right;">"Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment"</p>
+      <p style="text-align:center;">"Bitte enschuldige, dass ich geschriehen habe"</p>
+      <p style="text-align:left;">"die rätsel sind belastend für uns alle"</p>
+    </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/04" style=color:rgb(255,0,0)>&lt</a>
       </div>
