--- a/03.html
+++ b/03.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(155,0,0);
+}
+</style>
 </head>
 <html>
     <head>
     </head>
     <body>
       <div class="qbild">
-        <img src="03.jpg" alt="quest image" style="height:90vh;">
+      <p style="color:rgb(255, 0, 0); font-size:20em;">
+      1
+      </p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a" style=color:rgb(255,0,0)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02" style=color:rgb(255,0,0)>&lt</a>
       </div>
       <div class="pfeil">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/04" style=color:rgb(255,0,0)>&gt</a>
