--- a/02.html
+++ b/02.html
@@ -19,7 +19,7 @@
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/01" style=color:rgb(0,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a" style=color:rgb(0,0,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03" style=color:rgb(0,0,0)>&gt</a>
       </div>
     </body>
 </html>
