--- a/28.html
+++ b/28.html
@@ -6,18 +6,15 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+        <img src="28.jpg" alt="quest image" style="width:70vw;">
+        <p style="font-size:200%; text-align:center;">Chihiros Reise ins Zauberland / Sen to Chihiro no kamikakushi (Hayao Miyazaki, 2001)</p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/27" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/29" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
