--- a/30.html
+++ b/30.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="30.jpg" alt="quest image" style="weight:90vw;">
+        <img src="30.jpg" alt="quest image" style="width:90vw;">
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/29" style=color:rgb(156,0,205)>&lt</a>
