--- a/31.html
+++ b/31.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"All That Heaven Allows"</p>
+      <p style="text-align:left;">" Ist es relevant, dass die Uhr kaputt oder aus ist?"</p>
+      <p style="text-align:right;">"Ich versuche doch nur das Rätsel zu lösen."</p>
+      <p style="text-align:center;">"Könnte aber ein A24 sein"</p>
+      <p style="text-align:left;">"Aber jetzt ist es ja gelöst. Schwäbischer Dialekt war gefordert gewesen."</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/30" style=color:rgb(156,0,205)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/32" style=color:rgb(156,0,205)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
