--- a/32.html
+++ b/32.html
@@ -8,6 +8,7 @@
     <body>
       <div class="qbild">
         <img src="32.jpg" alt="quest image" style="width:80vw;">
+        <p style="font-size:200%; text-align:center;">G-Force</p>
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/31" style=color:rgb(156,0,205)>&lt</a>
