--- a/34.html
+++ b/34.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(225, 205, 0);
+}
+</style>
 </head>
 <html>
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+      <p style="color:rgb(255,255,0); font-size:20em;">
+      6
+      </p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/33" style=color:rgb(255,255,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/35" style=color:rgb(255,255,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
