--- a/36.html
+++ b/36.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Ein Doc für alle Fälle ist etwas wärmer. In seiner Allgemeinheit."</p>
+      <p style="text-align:left;">"In der Tat hab ich dieses Foto ausgesucht, weil er irgendwie kuschelig aussieht."</p>
+      <p style="text-align:right;">"Doctor Snuggles ('Doktor schnucklig')"</p>
+      <p style="text-align:center;">"Stalked By My Doctor"</p>
+      <p style="text-align:left;">"Helfer, help und heal the living schon sehr warm."</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/35" style=color:rgb(255,255,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/37" style=color:rgb(255,255,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
