--- a/37.html
+++ b/37.html
@@ -6,18 +6,15 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+        <img src="37.jpg" alt="quest image" style="height:80vh;">
+        <p style="font-size:200%; text-align:center;">G-Force</p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/36" style=color:rgb(255,255,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/38" style=color:rgb(255,255,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
