--- a/35.html
+++ b/35.html
@@ -10,10 +10,10 @@
         <img src="35.jpg" alt="quest image" style="height:90vh;">
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/34" style=color:rgb(255, 255, 0)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/34" style=color:rgb(255,255,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/36" style=color:rgb(255, 255, 0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/36" style=color:rgb(255,255,0)>&gt</a>
       </div>
     </body>
 </html>
